<resources>>
    <string name="app_name">May day</string>
    <string name="homepage">Choose the type of your emergency</string>
    <string name="button_next">Next</string>
    <string name="police">Police selected</string>
    <string name="firefighter">Firefighter selected</string>
    <string name="doctor">Doctor selected</string>
    <string name="plumber">Plumber selected</string>
    <string name="biere">Download informations</string>
    <string name="telecharger">See the status of my call</string>
    <string name="action_settings">Settings</string>
    <string name="Hello">Hello !!</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="select_city">Choose your city:</string>
    <string name="title_inscription">Subscribe !</string>
    <string name="button_confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="Hello_world">Hello world !</string>
    <string name="menu_toast">Toast</string>
    <string name="menu_notification">Emergency on their way</string>
    <string name="change_date">Insert new date</string>
    <string name="msg">Insert your new date</string>

    <string name="toast_example">Roller Toaster</string>

    <string name="notification_example">Emergency on their way</string>
    <string name="endDL">Stay calm</string>

    <string name="dialog_msg">The emergency are on their way. Do you want to proceed?</string>
    <string name="dialog_title">Warning</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="ok">OK</string>
    <string name="phone">Phone number</string>
    <string name="adress">Adress</string>
    <string name="date">Date</string>
    <string name="title_activity_recapitulatif">Status</string>
    <string name="recapitulatif">Status</string>

    <string name="valuepolice">Police</string>
    <string name="valuedoctor">Doctor</string>
    <string name="valueplumber">Plumber</string>
    <string name="valuefirefighter">Firefighter</string>



    <string-array name="items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>

    <string name="mon_texte">Mon texte</string>

</resources>
